Index Seite angepasst

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Willkommen zum #{title}
+  p Dies ist nur eins meiner Schulprojekte, welches die VBB API abfragt, um eine Verbindung von Punkt A nach Punkt B zu finden.
+  p Es ist nicht der perfekte Code, also am besten nicht produktiv nutzen.
